Update of SafeReturnSwagger.yaml
